--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
   <head>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="./style.css"></script>
   </head>
 
   <body>
