--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <p> X: <span id="accel-x">0</span> </p> 
         <p> Y: <span id="accel-y">0</span> </p> 
         <p> Z: <span id="accel-z">0</span> </p> 
+      <h2>Gravity</h2>
+        <p> X: <span id="accelgravity-x">0</span> </p> 
+        <p> Y: <span id="accelgravity-y">0</span> </p> 
+        <p> Z: <span id="accelgravity-z">0</span> </p> 
 
   </body>
 
@@ -60,9 +64,14 @@ function stopDeviceMotion(){
 function handleAcceleration(ev){
 
     //alert("" + event.acceleration.x + " " + event.acceleration.y + " " + event.acceleration.z);
+    //accleration
     $('#accel-x').text( ev.acceleration.x );
     $('#accel-y').text( ev.acceleration.y );
     $('#accel-z').text( ev.acceleration.z );
+    //gravity
+    $('#accelgravity-x').text( ev.accelerationIncludingGravity.x );
+    $('#accelgravity-y').text( ev.accelerationIncludingGravity.y );
+    $('#accelgravity-z').text( ev.accelerationIncludingGravity.z );
 }
 
 </script>
