--- a/sensor.html
+++ b/sensor.html
@@ -40,7 +40,7 @@
 
 <!--  ===========================================  -->
 <script type="text/javascript">
-alert("Welcome to sample page 3!");
+alert("Need to Allow location information!");
 
 //////////////////////////////////////////////////////
 //Function to get sensor access permission from the browser
