--- a/get_csv.html
+++ b/get_csv.html
@@ -82,7 +82,7 @@ function stopDeviceMotion(){
  
 //参考: https://samehack.com/javascript-csv-download/
 // CSV格納用 ※ヘッダーをあらかじめ設定しておく
-const header = "\r\n";
+const header = "\n";
 let accelData = header;
 function accelCsvDownload(accelData){
   ////////////////////CSV形式へ変換////////////////////
@@ -189,13 +189,13 @@ function handleAcceleration(ev){
     ////////////////////出力するデータの作成////////////////////
     // CSV格納用 ※ヘッダーをあらかじめ設定しておく
     accelData += e_time.getTime();
-    accelData += ",acc ,";
+    accelData += ",acc,";
     accelData += ev.acceleration.x;
     accelData += ",";
     accelData += ev.acceleration.y;
     accelData += ",";
     accelData += ev.acceleration.z;
-    accelData += "\r\n";
+    accelData += "\n";
 }
 
 ////////////////////////////////////////////////////////////////////
@@ -212,7 +212,7 @@ function handleOrientation(ev){
     $('#ori-csv').append(e_time.getTime() + ", ori," + ev.absolute + "," + ev.alpha + "," + ev.beta + "," + ev.gamma + "\n");
 
     orientData += e_time.getTime();
-    orientData += ",ori ,";
+    orientData += ",ori,";
     orientData += ev.absolute;
     orientData += ",";
     orientData += ev.alpha;
@@ -220,7 +220,7 @@ function handleOrientation(ev){
     orientData += ev.beta;
     orientData += ",";
     orientData += ev.gamma;
-    orientData += "\r\n";
+    orientData += "\n";
 }
 
 </script>
