csvの中身がundefinedとなってしまう。改行コードを編集

--- a/get_csv.html
+++ b/get_csv.html
@@ -82,7 +82,7 @@ function stopDeviceMotion(){
  
 //参考: https://samehack.com/javascript-csv-download/
 // CSV格納用 ※ヘッダーをあらかじめ設定しておく
-const header = "\r\n";
+const header = "";
 let accelData = header;
 function accelCsvDownload(accelData){
   ////////////////////CSV形式へ変換////////////////////
