60秒を超えると自動的に停止する

--- a/recognition.html
+++ b/recognition.html
@@ -33,7 +33,46 @@
 
     <hr>
 
-    
+    <h2>レポート記述欄</h2>
+    <ul>
+      <li>氏名: 髙原知顕</li>
+      <li>学部: 環境情報</li>
+      <li>学年: 3年</li>
+      <li>学籍番号: 72144288</li>
+      <li>CNSメールアドレス: t21428tt</li>
+    </ul>
+
+    <h3>収集した行動データについて</h3>
+    <ul>
+      <li>選定した理由</li>
+      <ol>(全体)スマホから取得できるデータであること。(加速度・ジャイロ)移動速度や方向を取得でき、行動予測でもよく使用されているため。(気圧)climbing upstairsの検出ができそうだと考えたため。</ol>
+      <li>収集についての詳細</li>
+      <ol>devicemotion, deviceorientation, devicepressureから取得した。</ol>
+      <li>工夫した点 / 困難だった点</li>
+      <ol>特になし。授業で紹介されたhtmlをもとに修正したら取得できた。</ol>
+    </ul>
+
+    <h3>特徴量について</h3>
+    <ul>
+      <li>選定した理由</li>
+      <ol></ol>
+      <li>追加した特徴量について詳細</li>
+      <li>工夫した点 / 困難だった点</li>
+    </ul>    
+
+    <h3>機械学習モデル</h3>
+    <ul>
+      <li>採用したアルゴリズムや学習結果の詳細</li>
+      <li>工夫した点</li>
+      <li>工夫した点 / 困難だった点</li>
+    </ul>
+
+    <h3>実機に移植しての性能評価</h3>
+    <ul>
+      <li>評価尺度について</li>
+      <li>評価結果</li>
+      <li>工夫した点 / 困難だった点</li>
+    </ul>
 
   </body>
 
