--- a/get_csv.html
+++ b/get_csv.html
@@ -73,6 +73,19 @@
     let orientData = header;
     let label = "stand";
 
+    function countTime() {
+      // 現在の時刻を取得
+      var start_time = new Date();
+      // 経過時間を計算
+      var end_time = new Date();
+      elapsed_time = elapsed_time + end_time - start_time; // ミリ秒単位の経過時間
+      $("#elapsed-time").text(elapsed_time);
+      
+      if (elapsed_time < 5000) { // 5秒までカウントする例
+        setTimeout(countTime, 100); // 100ミリ秒後に再度countTimeを呼び出す
+      }
+    }
+
     function requestMotionPermission() {
       if (
         DeviceMotionEvent &&
