--- a/get_csv.html
+++ b/get_csv.html
@@ -9,6 +9,9 @@
   <body>
     <h1>Data from accelerometer</h1>
     <div>経過時間(ミリ秒): <span id="elapsed-time">0</span></div>
+    <button onclick="countTime();">
+      count time
+    </button>
     <button onclick="requestMotionPermission();">
       Get permission and start sensing
     </button>
