--- a/get_csv.html
+++ b/get_csv.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Data from accelerometer</h1>
-    <div>経過時間(ミリ秒): <span id="elapsed-time">0</span></div>
+    <div id="elapsedTime"></div>
     <button onclick="countTime();">
       count time
     </button>
@@ -76,18 +76,19 @@
     let orientData = header;
     let label = "stand";
 
-    function countTime() {
-      // 現在の時刻を取得
-      var start_time = new Date();
-      // 経過時間を計算
-      var end_time = new Date();
-      elapsed_time = elapsed_time + end_time - start_time; // ミリ秒単位の経過時間
-      $("#elapsed-time").text(elapsed_time);
-      
-      if (elapsed_time < 5000) { // 5秒までカウントする例
-        setTimeout(countTime, 100); // 100ミリ秒後に再度countTimeを呼び出す
-      }
+    function countTime(){
+    var startTime = new Date();
+
+    function updateElapsedTime() {
+        var currentTime = new Date();
+        var elapsedTime = currentTime - startTime; // 経過時間（ミリ秒）
+        $("#elapsedTime").text("経過時間（ミリ秒）: " + elapsedTime);
+
+        setTimeout(updateElapsedTime, 100); // 100ミリ秒後に再度updateElapsedTimeを呼び出す
     }
+    }
+
+            updateElapsedTime(); // カウント開始
 
     function requestMotionPermission() {
       if (
