--- a/get_csv.html
+++ b/get_csv.html
@@ -85,7 +85,9 @@
         var currentTime = new Date();
         var elapsedTime = currentTime - startTime; // 経過時間（ミリ秒）
         $("#elapsedTime").text("経過時間（ミリ秒）: " + elapsedTime);
-      setTimeout(updateElapsedTime, 100); // 100ミリ秒後に再度updateElapsedTimeを呼び出す
+        if(elapsedTime < 10000){
+          setTimeout(updateElapsedTime, 100); // 100ミリ秒後に再度updateElapsedTimeを呼び出す
+        }
     }
 
     function requestMotionPermission() {
