--- a/get_csv.html
+++ b/get_csv.html
@@ -249,8 +249,8 @@
       var currentTime = new Date();
       var elapsedTime = currentTime - startTime; // 経過時間（ミリ秒）
       $("#elapsedTime").text("経過時間（秒）: " + elapsedTime/1000);
-      if(elapsedTime < 60000){
-        setTimeout(updateElapsedTime, 100); // 100ミリ秒後に再度updateElapsedTimeを呼び出す
+      if(elapsedTime > 60000){
+        stopDeviceMotion(); //60秒後に止める
       }
     }
 
